force-app/main/default/objects/Template_mapping_output__c/Template_mapping_output__c.object-meta.xml
<CustomObject>
    <label>Template mapping output</label>
    <nameField>
        <displayFormat>TMN-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template mapping outputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>