force-app/main/default/objects/Template_Mapping_Output__c/fields/Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Mapping</label>
    <referenceTo>Mapping_Config__c</referenceTo>
    <relationshipLabel>Template Mapping Outputs</relationshipLabel>
    <relationshipName>Template_Mapping_Outputs</relationshipName>
    <type>Lookup</type>
</CustomField>