force-app/main/default/objects/Template_Mapping_Output__c/fields/Output_Html__c.field-meta.xml
<CustomField>
    <fullName>Output_Html__c</fullName>
    <label>Output Html</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>