force-app/main/default/objects/Template_Mapping_Output__c/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Id</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Template Mapping Outputs</relationshipLabel>
    <relationshipName>Template_Mapping_Outputs</relationshipName>
    <type>Lookup</type>
</CustomField>